--- a/random_forest.Rmd
+++ b/random_forest.Rmd
@@ -49,7 +49,7 @@ doParallel::registerDoParallel()
 [Direct link to dataset](https://s3.amazonaws.com/capitalbikeshare-data/202108-capitalbikeshare-tripdata.zip)
 
 ```{r get_data, cache=FALSE, warning=FALSE, message=FALSE}
-
+  
 cbs_data <- read_files('data/')
 data <- sep_departures_from_arrivals(cbs_data) %>%
   filter(!is.na(station)) # Remove electric bikes not going to / from a station
@@ -58,7 +58,7 @@ filtered_data <- filter_by_distance(data, from_station = 'lincoln_memorial', dis
 
 hour_data <- get_station_hourly(filtered_data) %>%
   get_historic_weather() %>% 
-  add_sun_is_out() %>% 
+  add_sun_is_out()
   #filter(conditions != "Bad") # To test if bad weather really hurts RMSE that much
 
 lagged_data <- setup_for_time_prediction(hour_data, station_name = "lincoln_memorial")
@@ -136,18 +136,18 @@ tune_results <- tune_grid(
   grid = 8,
   metrics = metric_set(rmse, mae)
 )
-
-metrics <- tune_results %>%
-  collect_metrics() %>%
-  pivot_longer(trees:mtry,
-    values_to = "value",
-    names_to = "parameter"
-  )
 ```
 
 #### Results to better tune the mtry and trees
 
 ```{r graphs}
+metrics <- tune_results %>%
+  collect_metrics() %>%
+  pivot_longer(min_n:mtry,
+    values_to = "value",
+    names_to = "parameter"
+  )
+
 metrics %>%
   filter(.metric == "rmse") %>%
   ggplot(aes(x = value, y = mean, color = parameter)) +
@@ -167,7 +167,7 @@ metrics %>%
   labs(title = "RMSE")
 
 metrics %>%
-  filter(.metric == "rmse", parameter == "trees") %>%
+  filter(.metric == "rmse", parameter == "min_n") %>%
   ggplot(aes(x = value, y = mean)) +
   geom_point() +
   labs(title = "RMSE")
