--- a/random_forest.Rmd
+++ b/random_forest.Rmd
@@ -53,19 +53,21 @@ doParallel::registerDoParallel()
 
 ```{r get_data, cache=FALSE, warning=FALSE, message=FALSE}
   
-# cbs_data <- read_files('data/')
-# data <- sep_departures_from_arrivals(cbs_data) %>%
-#   filter(!is.na(station)) # Remove electric bikes not going to / from a station
-# 
-# filtered_data <- filter_by_distance(data, from_station = 'lincoln_memorial', distance_m = 1600)
-# 
-# hour_data <- get_station_hourly(filtered_data) %>%
-#   get_historic_weather() %>% 
-#   add_sun_is_out() %>% 
+cbs_data <- read_files('data/')
+data <- sep_departures_from_arrivals(cbs_data) %>%
+  filter(!is.na(station)) # Remove electric bikes not going to / from a station
 
-hour_data <- read_csv('hour_data.csv') %>% 
+filtered_data <- filter_by_distance(data, from_station = 'lincoln_memorial', distance_m = 3200)
+
+hour_data <- get_station_hourly(filtered_data) %>%
+  get_historic_weather() %>%
+  add_sun_is_out() %>%
   format_weather() %>% 
   filter(conditions != 'Bad')
+
+# hour_data <- read_csv('hour_data.csv') %>% 
+#   format_weather() %>% 
+#   filter(conditions != 'Bad')
 
 
 lagged_data <- setup_for_time_prediction(hour_data, station_name = "lincoln_memorial")
